[project]
name = "local-rag-devsecops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "markdown-it-py>=4.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[project.scripts]
rag = "rag.cli:app"
